--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
   </head>
   <body>
     <!-- Início do Menu Responsivo -->
@@ -233,9 +237,84 @@
         </div>
       </div>
     </section>
-    <footer class="footer">
-      <p>Feito por Raíssa Barata &copy; 2025</p>
+    <!-- Início do Novo Footer -->
+    <footer class="footer-container">
+      <div class="footer-content">
+        <div class="footer-column">
+          <h3>IDIOMUS</h3>
+          <p>
+            Conectando alunos de inglês em uma comunidade colaborativa e segura
+            para praticar e aprimorar suas habilidades linguísticas.
+          </p>
+          <div class="social-icons">
+            <a href="#" class="social-icon"
+              ><i class="fab fa-facebook-f"></i
+            ></a>
+            <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+            <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+            <a href="#" class="social-icon"
+              ><i class="fab fa-linkedin-in"></i
+            ></a>
+          </div>
+        </div>
+
+        <div class="footer-column">
+          <h3>Links Rápidos</h3>
+          <ul class="footer-links">
+            <li><a href="#">Início</a></li>
+            <li><a href="#">Sobre Nós</a></li>
+            <li><a href="#">Comunidade</a></li>
+            <li><a href="#">Planos e Preços</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">FAQ</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-column">
+          <h3>Contato</h3>
+          <div class="contact-info">
+            <div class="contact-item">
+              <i class="fas fa-map-marker-alt contact-icon"></i>
+              <span>São Paulo, SP - Brasil</span>
+            </div>
+            <div class="contact-item">
+              <i class="fas fa-phone contact-icon"></i>
+              <span>+55 (11) 9999-9999</span>
+            </div>
+            <div class="contact-item">
+              <i class="fas fa-envelope contact-icon"></i>
+              <span>contato@idiomus.com.br</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="footer-column">
+          <h3>Newsletter</h3>
+          <p>
+            Inscreva-se para receber dicas de inglês e novidades da comunidade.
+          </p>
+          <form class="newsletter-form">
+            <input
+              type="email"
+              class="newsletter-input"
+              placeholder="Seu e-mail"
+              required
+            />
+            <button type="submit" class="newsletter-button">
+              Inscrever-se
+            </button>
+          </form>
+        </div>
+      </div>
+
+      <div class="footer-bottom">
+        <p>
+          © 2025 IDIOMUS. Todos os direitos reservados. Desenvolvido por
+          <a href="#">Raíssa Barata</a>
+        </p>
+      </div>
     </footer>
+    <!-- Fim do Novo Footer -->
 
     <script src="main.js"></script>
   </body>
